		and "offset", and "scale" is now twice what it used to be.  This will
		require you to double your values that you pass in for that.  This change
		makes the class consistent with CircledPortrayal3D and enables us to easily
		arrange it to be a subclass of OvalPortrayal2D; thus it inherits the new
		precise drawing features of that superclass.
	Modifications to ShapePortrayal2D.  It now handles precise drawing just like
		OvalPortrayal2D etc.  It also allows you to provide double-valued polygons
		in the form of arrays of x/y coordinates, as well as Shapes.
	Changes to HexagonalPortrayal2D.  This class is now a subclass of
		ShapePortrayal2D and so inherits its precise drawing.  We've also changed
		the constructor features of this class -- no longer can you "also" draw
		the frame in addition to the shape.  It's either stroke the frame or
		fill the object, you pick, just like OvalPortrayal2D and RectanglePortrayal2D
		etc.
	Added precise drawing to ImagePortrayal2D
	Bugfix in GenericEdgePortrayal3D when the edge should end up parallel to O_y.
		Thanks to Nicolas Payette (nicolaspayette@gmail.com).
    Bugfix to shuffling algorithm used in MASON. We stopped one element too early,
            so for small arrays the shuffling is non-uniform (and for size-two arrays
            there was no shuffling at all).  Gagh.  For shuffling large numbers of items,
            the effect was minimal.  This affects Bag.shuffle(), IntBag.shuffle(),
            DoubleBag.shuffle(), Schedule, and RandomSequence.
	Bugfix in constructor SpatialNetwork3D(final SparseGrid3D grid, final Network network)
	Added data cullig functionality to time series charts, both programmatically and
		from the GUI. Affected classes:
			TimeSeriesChartingPropertyInspector
			TimeSeriesChartingGenerator, and
			ChartGenerator (minor reordering of properties).
	ChartGenerator offers getters/setters for using log scale on either axis.
		
	