@@ -1521,6 +1521,10 @@ Version 14
 			TimeSeriesChartingPropertyInspector
 			TimeSeriesChartingGenerator, and
 			ChartGenerator (minor reordering of properties).
+	The data culling code resides in sim.util.media.chart; 	the original location (sim.util.datacull) was deleted.			
 	ChartGenerator offers getters/setters for using log scale on either axis.
-		
+	ChartingPropertyInspector offers "public getSeriesAttributes()"
+		to return the SeriesAttributes used in the ChartGenerator for the series defined by that inspector;
+		now you can programmatically set the number of bins in a HistogramChartingPropertyInspector
+		(after you cast it to HistogramSeriesAttributes, of course).
 	
